backend/mobipay_backend/src/main/java/com/example/mobipay/domain/invitation/error/InvitationNoFoundException.java
package com.example.mobipay.domain.invitation.error;

public class InvitationNoFoundException extends RuntimeException {

    public InvitationNoFoundException() {
        super("Invitation not found");
    }

    public InvitationNoFoundException(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }
}
